update scripts
